task1-workload-hardening/disallow-latest.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest
spec:
  validationFailureAction: Enforce
  rules:
  - name: no-latest-tag
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: "latest tag is not allowed."
      pattern:
        spec:
          containers:
          - image: "!*:latest"
